magda-web-client/src/Components/Common/Choice.scss
.choice-buttonHeading {
    margin: 0px 0px 28px 0px;
    text-align: left;
    font-size: 18px;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.11;
    letter-spacing: normal;
    color: #ffffff;
}

.au-btn--secondary.choice-Button {
    color: #484848 !important;
    .choice-buttonHeading {
        color: #484848 !important;
    }
}

.choice-IconRow {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.choice-Icon {
    width: 5em;
    margin-right: 2em;
    height: 5em;
}

.choice-Button {
    width: 520px;
    height: 220px;
    border-radius: 0 40px 40px 40px !important;
    padding-left: 45px !important;
    padding-top: 55px !important;
    padding-right: 45px !important;
    border: none !important;
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
}

.au-btn--secondary.choice-Button {
    border: none !important;
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
}

